# rpi-embedded

./: .gitignore  .gitmodules  2x2MatrixSwitch.cpp  MCP23S17.cpp  MCP23S17.hpp  blinkingLED.cpp  main  main.c  main.cpp  mcp23s17.hpp
lib/: MCP23S17.cpp  MCP23S17.hpp  SPICO.cpp  SPICO.hpp
lib/SPICO/: SPICO.cpp  SPICO.hpp
lib/kissfft-131.1.0/: .gitignore  .travis.yml
lib/kissfft-131.1.0/test/: Makefile
pico/blink/: CMakeLists.txt  main.cpp
pico/blink_led/: main.cpp
pico/pico_to_zero/: CMakeLists.txt  main.cpp
pico/rotary_encoder/: CMakeLists.txt  main.cpp
pico/serial_test/: CMakeLists.txt  main.cpp
pico/switch_led/: main.cpp
zero w/: blinkingLED.cpp  switchLED.cpp
zero-w/: 2x2MatrixSwitch.cpp  blinkingLED.cpp  compile.sh  from_pico.cpp  spi-test-aikapi.cpp  spi-test-pigpio.cpp  switchLED.cpp  zero-pico  zero-pico.cpp  zero_to_pico.cpp
